--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <!-- PON UN FAVICON!!! -->
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CAMBIA EL TITLE!!! -->
     <title>Vite Template</title>
   </head>
   <body>
+
+    <!-- <div class="heart"></div> -->
+
+    <!-- <div class="guybrush__sky">
+      <div class="guybrush__sea">
+        <div class="guybrush__player"></div>
+      </div>
+    </div> -->
+
+    <div class="tablet">
+      <div class="tablet__header"></div>
+      <div class="tablet__redCircle"></div>
+      <div class="tablet__yellowCircle"></div>
+      <div class="tablet__greenCircle"></div>
+
+      <div id="tablet_lines">
+      </div>
+    </div>
+
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
