--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
 
-    <!-- <div class="heart"></div> -->
+    <!-- <div class="heart"></div>
 
-    <!-- <div class="guybrush__sky">
+    <div class="guybrush__sky">
       <div class="guybrush__sea">
         <div class="guybrush__player"></div>
       </div>
